# flatdino

./: .gitignore  README.md  pyproject.toml
flatdino/: __init__.py  augmentations.py  autoencoder.py  aux.py  compute_stats.py  distributed.py  train.py  train_decoder.py  train_generator.py  train_vq.py  utils.py  vq_autoencoder.py
flatdino/data/: __init__.py  data.py  utils.py
flatdino/decoder/: augmentations.py  diffaug.py  discriminator.py  dit_dh.py  rae_decoder.py  sampling.py
flatdino/eval/: __init__.py  attention_maps.py  decoder_rfid.py  diffusability.py  dino_intrinsic_dimensionality.py  dino_spatial_redundancy.py  generator_reconstruction.py  gfid.py  gfid_adm.py  interpolate.py  inversion.py  knn.py  mask_token.py  metrics.py  mu_std_hist.py  mutual_information.py  noise_levels.py  noise_recovery.py  performance_gpu.py  reconstruction.py  rfid_adm.py  rfid_adm_vq.py  token_ablation.py  token_ablation_images.py  token_norms.py  total_correlation.py
flatdino/metrics/: __init__.py  adm.py  fid.py  gfid.py  inversion.py  knn.py  linear_probe.py  utils.py
flatdino/models/: dit.py  fsq.py  transformer.py  vit.py
flatdino/pretrained/: __init__.py  dino.py  dinov2.py  inception.py  rae_decoder.py  rae_decoder_utils.py  rae_decoder_vitxl.py
tests/: test_fsq.py  test_vqdino.py
